refactor(auth,mybox): 주석 추가 및 일부 코드 수정